[gd_scene load_steps=20 format=2]

[ext_resource path="res://Dracky.gd" type="Script" id=1]
[ext_resource path="res://silent dracky sprite.png" type="Texture" id=2]
[ext_resource path="res://dracky sprite.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "attack",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 19.1383
height = 18.157

[sub_resource type="CapsuleShape2D" id=4]
radius = 18.1977
height = 20.2348

[sub_resource type="CircleShape2D" id=5]
radius = 257.8

[node name="Dracky" type="RigidBody2D" groups=[
"mobs",
]]
collision_layer = 2
collision_mask = 5
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.23961, -1.94463 )
scale = Vector2( 0.447429, 0.487906 )
frames = SubResource( 2 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.96314, -6.055 )
rotation = -0.464605
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 97, 0 )

[node name="CanFireAgainTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="EnemyMuzzle" type="Position2D" parent="."]
position = Vector2( -64.2898, 0.793701 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -7.62939e-06, -0.31498 )
collision_layer = 0

[node name="hurtbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -5.87532, -6.72066 )
rotation = -0.466982
shape = SubResource( 4 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0

[node name="AggroRange" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -7.62939e-06, -0.31498 )
shape = SubResource( 5 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="CanFireAgainTimer" to="." method="_on_CanFireAgainTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
